--- a/Abschlussarbeiten/LaTex-Template-Abschlussarbeiten-HNU/HNU-Template.tex
+++ b/Abschlussarbeiten/LaTex-Template-Abschlussarbeiten-HNU/HNU-Template.tex
@@ -245,7 +245,7 @@ Darüber hinaus gibt es weitere Dinge zu sehen, wie ...
 % Erklärung
 % ##############################################
 \newpage
-\section*{Erklärung} % bitte beachten Sie die Hinweise vom Studien und Prüfungsamt
+\section*{Erklärung} % bitte beachten Sie die Hinweise vom Studien- und Prüfungsamt
 Ich erkläre hiermit an Eides statt, dass ich die vorliegende Arbeit selbstständig und ohne unzulässige fremde Hilfe angefertigt habe. Die verwendeten Quellen sind vollständig zitiert. Darüber hinaus erkläre ich ebenfalls die Regeln für den Einsatz von künstlicher Intelligenz im Erstellprozess der vorliegenden Arbeit befolgt zu haben, zu finden im Dokument Rules for AI (siehe \url{https://github.com/abx-firez/HNUdocs/blob/develop/RulesForAI.pdf)}.
 \bigskip
  
