--- a/Abschlussarbeiten/LaTex-Template-Abschlussarbeiten-HNU/HNU-Template.tex
+++ b/Abschlussarbeiten/LaTex-Template-Abschlussarbeiten-HNU/HNU-Template.tex
@@ -1,9 +1,14 @@
 % Bereitgestellt von Prof. Dr. Alexander Bartel, alexander.bartel@hnu.de, Fakultät Informationsmanagement, HNU
-% Das folgende Template kann für Bachelor- und Masterarbeiten an der HNU verwendet werden. Per default ist die Ausgabensprache deutsch.
-% In der Datei references.bib können Sie Ihre Quellen angeben. Achten Sie auf den korrekten  Dokument-/Zitationstyp, damit die Referenz korrekt im Quellenverzeichnis dargestellt wird. Viele Datenbanken bieten bei einzelnen Quellen BibTeX-Exporte an, die Sie in references.bib direkt übernehmen können. Achten Sie dennoch auf die Vollständigkeit und Korrektheit der übernommenen Daten. Eine erste gute Orientierung: https://de.wikipedia.org/wiki/BibTeX. 
-% Zur Verwaltung und Pflege Ihrer Literatur empfehle ich Zotero (https://www.zotero.org/), JabRef (https://www.jabref.org/) oder Mendeley (https://www.mendeley.com/). Citavi wird nicht mehr empfohlen.
-% Für das Schreiben der eigentlichen Arbeit empfehle ich als Online-Editor Overleaf (https://www.overleaf.com) oder TeXStudio (https://www.texstudio.org/) als Desktop-App. Theoretisch kann jeder beliebige Editor dafür verwendet werden.
-% Am Besten, Sie starten mit dem Bereich Variablen.
+% Das folgende Template kann für Bachelor- und Masterarbeiten an der HNU verwendet werden. Standardmäßig ist die Ausgabesprache Deutsch.
+
+% Ein paar Empfehlungen/Anmerkungen vorab:
+% 1. In der Datei references.bib können Sie Ihre Quellen angeben. Achten Sie auf den richtigen Dokument-/Zitationstyp, damit die Referenz korrekt im Quellenverzeichnis dargestellt wird. Viele Datenbanken bieten bei einzelnen Quellen BibTeX-Exporte an, die Sie in references.bib direkt übernehmen können. Achten Sie dennoch auf die Vollständigkeit und Korrektheit der übernommenen Daten. Eine erste gute Orientierung bietet: https://de.wikipedia.org/wiki/BibTeX. 
+% 2. Zur Verwaltung und Pflege Ihrer Literatur empfehle ich Zotero (https://www.zotero.org/), JabRef (https://www.jabref.org/) oder Mendeley (https://www.mendeley.com/). Citavi wird nicht mehr empfohlen. Gute Einführungsvideos finden Sie von der HNU-Bibliothek hier: https://www.hnu.de/hochschule/einrichtungen-und-service/bibliothek/wissenschaftliches-arbeiten/videotutorials
+% 3. Für das Schreiben der eigentlichen Arbeit empfehle ich als Online-Editor Overleaf (https://www.overleaf.com) oder TeXStudio (https://www.texstudio.org/) als Desktop-App. Theoretisch kann jeder beliebige Text-Editor dafür verwendet werden. Wenn Sie dieses Template in Overleaf importieren wollen, müssen Sie zunächst alle 3 Dateien (HNU-Template.tex, references.bib, HNU_Logo.jpg) in einem Zip-Archiv zusammenfassen und dann in Overleaf importieren.
+% 4. In jedem Fall sollten Sie sich mit den Grundlagen von LaTeX vertraut machen, bevor Sie mit dem Schreiben Ihrer Arbeit beginnen. Eine gute Einführung finden Sie hier: https://www.overleaf.com/learn/latex/Learn_LaTeX_in_30_minutes
+% 5. Sichern Sie Ihre Arbeit regelmäßig, am besten im Hintergrund durch einen Cloud-Hoster, wie z.B. Dropbox, Google Drive, OneDrive, oder nutzen Sie das wesentlich Datenschutz-freundlichere Angebot des LRZ: https://sync.lrz.de/ (Zugriff darauf mittels HNU-Account möglich, Client für alle Plattformen verfügbar). Alternativ kann ein (privates) Github Repo natürlich auch verwendet werden.
+
+% So, nun kann es los gehen! Am Besten, Sie starten mit dem Bereich Variablen (siehe unten).
 % Viel Erfolg bei der Umsetzung Ihrer Abschlussarbeit!
 
 
@@ -19,7 +24,7 @@
 \usepackage{geometry} % für Layoutparameter (z.B. Seitenränder)
 \usepackage{lipsum} % für Lorem Ipsum-Text
 \usepackage{booktabs} % für Tabellenstyling
-\usepackage{microtype} % Ausgabeverschönerung
+\usepackage{microtype} % für Ausgabeverschönerung (z.B. Silbentrennung)
 \usepackage{listings} % für Code-Listings
 
 \onehalfspacing % Zeilenabstand im gesamten Dokument
@@ -56,9 +61,11 @@
 \newcommand*{\getSubmissionLocation}{Neu-Ulm}
 
 \begin{document}
-
 \newgeometry{top=0cm, bottom=0cm, left=0cm, right=0cm} % Keine Seitenränder
 
+% ##############################################
+% Titelseite
+% ##############################################
 \begin{titlepage}
     \begin{center}
         \vspace*{\fill} % Zentriert den Inhalt vertikal auf der Seite
@@ -115,7 +122,6 @@
     \end{center}
 \end{titlepage}
 
-
 \restoregeometry % Wiederherstellung der ursprünglichen Seitenränder
 \pagenumbering{roman} % Seitennummerierung mit römischen Ziffern
 
@@ -136,7 +142,7 @@ Laut \cite{example} zeigen Studien, dass... und \cite{lin1973} zeigt, dass ... u
 \newpage
 \listoffigures
 \listoftables
-
+% \lstlistoflistings % optional, falls Code-Listings verwendet werden
 
 % ##############################################
 % Einleitung
@@ -184,6 +190,8 @@ Die Tabelle \ref{tab:beispiel} zeigt ein Beispiel für eine Tabelle. \lipsum[1]
 Hier ein Beispiel wie Code eingebettet werden kann.
 
 % Das Styling eines Listings kann hochgradig angepasst werden, siehe bitte z.B. https://www.overleaf.com/learn/latex/Code_listing
+% Die Caption aus dem Listing kann später auch im Quellcodeverzeichnis auftauchen.
+% \lstlistoflistings wäre das entsprechende Kommando dafür, welches nach dem Tabellenverzeichnis eingefügt werden kann.
 \begin{lstlisting}[language=Python, caption=Beispiel für Python-Code]
     def get_pdf_text(pdf_docs):
     logging.info("Reading text from PDFs")
@@ -194,10 +202,6 @@ Hier ein Beispiel wie Code eingebettet werden kann.
             text += page.extract_text()
     return text
 \end{lstlisting}
-
-% Die Caption aus dem Listing kann später auch im Quellcodeverzeichnis auftauchen.
-% \lstlistoflistings wäre das entsprechende Kommando dafür, welches nach dem Tabellenverzeichnis eingefügt werden kann.
-
 
 \subsection{Beispiel für eine Abbildung}
 Ein bisschen viel Text... \lipsum[1] 
